--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.idea/
-*.csv
+#*.csv
 *.py[cod]
 *$py.class
-*.txt
+#*.txt
 
 # C extensions
 *.so
